@@ -58,21 +58,19 @@ def kres_cache_gc_args(config: KresConfig) -> str:
         args += " -v"
 
     gc_config = config.cache.garbage_collector
-    if gc_config:
-        args += (
-            f" -d {gc_config.interval.millis()}"
-            f" -u {gc_config.threshold}"
-            f" -f {gc_config.release}"
-            f" -l {gc_config.rw_deletes}"
-            f" -L {gc_config.rw_reads}"
-            f" -t {gc_config.temp_keys_space.mbytes()}"
-            f" -m {gc_config.rw_duration.micros()}"
-            f" -w {gc_config.rw_delay.micros()}"
-        )
-        if gc_config.dry_run:
-            args += " -n"
-        return args
-    raise ValueError("missing configuration for the cache garbage collector")
+    args += (
+        f" -d {gc_config.interval.millis()}"
+        f" -u {gc_config.threshold}"
+        f" -f {gc_config.release}"
+        f" -l {gc_config.rw_deletes}"
+        f" -L {gc_config.rw_reads}"
+        f" -t {gc_config.temp_keys_space.mbytes()}"
+        f" -m {gc_config.rw_duration.micros()}"
+        f" -w {gc_config.rw_delay.micros()}"
+    )
+    if gc_config.dry_run:
+        args += " -n"
+    return args
 
 
 @dataclass
